Updated apths in profile-service
